[package]
name = "peer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
automerge = "0.7.0"
clap = { version = "4.5.48", features = ["derive"] }
dirs = "6.0.0"
ed25519-dalek = { version = "2.2.0", features = ["pem", "rand_core"] }
futures = "0.3.31"
futures-timer = "3.0.3"
libp2p = { version = "0.56.0", features = ["full"] }
rand = "0.8.5"
serde = { version = "1.0.228", features = ["serde_derive"] }
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
