[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
futures = "0.3.31"
futures-timer = "3.0.3"
libp2p = { version = "0.56.0", features = ["full", "ping", "relay"] }
rand = "0.8.5"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
